# ROS_place

./: README.md
hello_world/: CMakeLists.txt  a.out  hello_world.cpp
node/: CMakeLists.txt  a.out  ros2_python_node.py  test_args.cpp
pkg/demo_cpp_pkg/: CMakeLists.txt
pkg/demo_cpp_pkg/src/: cpp_node.cpp
pkg/demo_python_pkg/: package.xml  setup.py
ws/src/demo_cpp_pkg/: CMakeLists.txt
ws/src/demo_cpp_pkg/src/: person_node.cpp
ws/src/demo_python_pkg/: package.xml  setup.py
ws/src/demo_python_pkg/demo_python_pkg/: person_node.py  python_node.py  writer_node.py
